# YAEPy

./: README.md  pyproject.toml
app/: main.py  new.py
app/widgets/: editor.py  file_browser.py
